--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://127.0.0.1:3306/the-bookshelf?createDatabaseIfNotExist=true
+    url: jdbc:mysql://mysqldb:3306/the-bookshelf
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     generate-ddl: true
